--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
 
-    <title>Password Generator | JavaScript Project</title>
+    <title>Password Generator/ Upasana swamy</title>
   </head>
   <body>
     <div class="container">
